<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Amtrak Status</string>
    <string name="action_settings">Settings</string>
    <string name="destinations">Destinations</string>
    <string name="trains">Trains</string>
    <string name="from">From</string>
    <string name="from_summary">Train station to start at</string>
    <string name="to">To</string>
    <string name="to_summary">Train station to end at</string>
    <string name="preferred_train">Preferred Train</string>
    <string name="preferred_train_summary">Will mainly target this train</string>
    <string name="hide_acela_trains">Hide Acela trains?</string>
    <string name="hide_acela_trains_summary"></string>
    <string name="add_route_settings">Add Train Route</string>
    <string name="destroy_route_settings">Destroy Train Route</string>
    <string name="network_connectivity_warning">No Network!</string>
    <string name="retry_button">Retry</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_network_connectivity">NetworkConnectivity</string>
    <string name="hello_world">Hello world!</string>

</resources>
