<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
    <PreferenceCategory android:title="@string/destinations">
        <EditTextPreference
            android:key="from"
            android:title="@string/from"
            android:summary="@string/from_summary" />
        <EditTextPreference
            android:key="to"
            android:title="@string/to"
            android:summary="@string/to_summary" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/trains">
        <EditTextPreference
            android:key="preferred_train"
            android:title="@string/preferred_train"
            android:summary="@string/preferred_train_summary"
            android:inputType="number" />
        <CheckBoxPreference
            android:key="hide_acela_trains"
            android:title="@string/hide_acela_trains"
            android:summary="@string/hide_acela_trains_summary"
            android:dependency="preferred_train"/>
    </PreferenceCategory>
</PreferenceScreen>